# demo_flake.nix

./: README.md  configuration.nix  coral.py  default.nix  disk-config.nix  flake.nix  hello.nix  lock.x86_64-linux.json  pyproject.toml
someproject/: __index__.py
