[project]
name = "coral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=11.3.0",
    "ai-edge-litert>=1.4.0",
    "tflite-runtime>=2.14.0"
]

[project.scripts]
coral_demo = "coral:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]


[tool.pycoral]
coral_version = "2.0"
