[project]
name = "coral"
version = "0.1.0"
description = "Google coral inference on nixos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy <2",
    "pillow<10",
    "ai-edge-litert>=1.0.0",
    "tflite-runtime>=2.0.0"
]

[project.scripts]
coral_demo = "coral:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]


[tool.pycoral]
coral_version = "2.0"
